syntax = "proto3";

package analytics.events;
option java_multiple_files = true;

message PatientEvent {
  string patientId = 1;
  string fullName = 2;
  string email = 3;
  string eventType = 4;
}
